--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="col col-md-7 col-sm-12 home-img">
-                <img src="image/ME.png" class="img-fluid pt-3" alt="Image Not Found" />
+                <img src="ME.png" class="img-fluid pt-3" alt="Image Not Found" />
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
             <div class="row about-content">
                 <div class="col-6 col-400-12 about-img">
                     <img
-                        src="image/image2.png" 
+                        src="image2.png" 
                         class="img-fluid"
                         alt="Image Not Found"
                     />
